compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_cyrillic_e.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn main() { е }"
---
----- SOURCE CODE
pub fn main() { е }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:17
  │
1 │ pub fn main() { е }
  │                 ^ Unexpected character

This looks like ascii latin letter e, but it is actually the unicode
Cyrillic letter е.
